<resources>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="home">Home</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="title_activity_sign_up">SignUpAct</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="exit">Exit</string>
    <string name="record_phone_call">Record Phone Call</string>
    <string name="logger">logger</string>
    <string name="documents">documents</string>
    <string name="settings">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_no">Contact No</string>
    <string name="sign_up">Sign up</string>
</resources>