<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.tpcreative.presentation.ui.user.view.SignInAct">

    <RelativeLayout
        android:layout_margin="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/enter_username"
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/enter_password"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/edtUserName"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/llSignIn"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_below="@+id/edtPassword"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/sign_in"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/sign_in_with_google"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@null"
            android:layout_centerInParent="true"
            android:layout_below="@+id/llSignIn"
            android:text="@string/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>